--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   role_name: install_ros_ubuntu
   author: Simone Conti - @itnok
-  description: Install ROS on a an Ubuntu host.
+  description: Install ROS on an Ubuntu host.
   company: itnok.com
 
   # If the issue tracker for your role is not on github, uncomment the
