[BUG] Roll back to use regular path to install role for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@
     - if curl --silent --output /dev/null --dump-header - "https://github.com/${TRAVIS_REPO_SLUG}" | grep "Status:[[:space:]]*404"; then touch .private_repo; fi
 
     # Download depended roles
-    - if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml -p extra_roles; fi
+    - if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml; fi
 
     # Basic role syntax check
     - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
