--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,10 +11,10 @@
     that:
       - install_ros_distro == "{{ item.ros_distro }}"
     fail_msg: "{{ ansible_distribution }} {{ ansible_distribution_version }} {{ ansible_distribution_release }} does NOT support ROS {{ install_ros_distro }}"
-  when: ansible_distribution_release == item.os_release
   with_items:
     - { os_release: "bionic", ros_distro: "melodic" }
     - { os_release: "focal", ros_distro: "noetic" }
+  when: ansible_distribution_release == item.os_release
 
 - name: "Install ROS '{{ install_ros_distro }}'"
   include_role:
@@ -24,7 +24,7 @@
       - "build-essential"
     manage_pkg_dependency: "{{ __manage_pkg_dependency + install_dependency }}"
     manage_pkg_key:
-      - { url: "hkp://keyserver.ubuntu.com:80", key: "C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654" }
+      - { url: "hkp://keyserver.ubuntu.com:80", key: "0xC1CF6E31E6BADE8868B172B4F42ED6FBAB17C654" }
     manage_pkg_repo:
       - "deb http://packages.ros.org/ros/ubuntu {{ ansible_distribution_release }} main"
     manage_pkg_app:
@@ -33,20 +33,30 @@
       - "{{ item.snake }}-rosinstall"
       - "{{ item.snake }}-rosinstall-generator"
       - "{{ item.snake }}-wstool"
-  when: ansible_distribution_release == item.os_release
   with_items:
     - { os_release: "bionic", snake: "python" }
     - { os_release: "focal", snake: "python3" }
+  when: ansible_distribution_release == item.os_release
 
 - name: "Check if `rosdep init` was run"
   stat:
     path: "/etc/ros/rosdep/sources.list.d/20-default.list"
   register: ros_sources_list
 
+- name: "Check if `~/.ros/rosdep/sources.cache` directory exists for user '{{ ansible_user }}'"
+  stat:
+    path: "~/.ros/rosdep/sources.cache"
+  become: yes
+  become_user: "{{ ansible_user }}"
+  register: ros_rosdep_directory
+
 - name: "Initialize ROS dependencies source list"
-  shell: "rosdep init"
+  command: "rosdep init"
   become: yes
   when: not ros_sources_list.stat.exists
 
-- name: "Update ROS dependencies for user '{{ remote_user }}'"
-  shell: "rosdep update"
+- name: "Update ROS dependencies for user '{{ ansible_user }}'"
+  command: "rosdep update"
+  become: yes
+  become_user: "{{ ansible_user }}"
+  when: not ros_rosdep_directory.stat.exists
